@startuml
class Application {
    - company: String
    - role: String
    - status: String
    - contactName: String
    - contactEmail: String
    - salary: Double
    - note: String
    - isArchived: boolean
    + setNote(note: String): void
    + getNote(): String
    + setArchived(isArchived: boolean): void
    + isArchived(): boolean
    + isSameApplication(other: Application): boolean
    + toStorageString(): String
}

class ApplicationList {
    + addApplication(app: Application): void
    + deleteApplication(index: int): void
    + getApplication(index: int): Application
    + getActiveApplication(displayIndex: int): Application
    + getArchivedApplication(displayIndex: int): Application
    + getApplications(): List<Application>
    + hasApplication(toCheck: Application): boolean
    + countActive(): int
    + countArchived(): int
    + getSize(): int
    + clear(): void
}

class Storage {
    - filePath: String
    + load(): ArrayList<Application>
    + save(applications: List<Application>): void
    - parseLine(line: String, lineNumber: int): Application
    - parseStatus(statusStr: String, lineNumber: int): String
    - parseSalary(salaryStr: String, lineNumber: int): Double
    - parseNote(noteStr: String): String
    - parseDeadlines(parts: String[], lineNumber: int, line: String): DeadlineList
}

class NoteCommand {
    - index: int
    - note: String
    + execute(applications, ui, storage): void
}

class ListCommand {
    + execute(applications, ui, storage): void
}

ApplicationList "1" *-- "0..*" Application
NoteCommand --> ApplicationList : reads/writes
NoteCommand --> Storage : saves
ListCommand --> ApplicationList : reads
Storage --> Application : creates
@enduml
